--- a/pom.xml
+++ b/pom.xml
@@ -16,7 +16,8 @@
 		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<gmavenplus-plugin.version>1.10.0</gmavenplus-plugin.version>
-		<java.version>11</java.version>
+		<kotlin.version>1.4.10</kotlin.version>
+		<kotlin-maven-plugin.jvmTarget>11</kotlin-maven-plugin.jvmTarget>
 	</properties>
 
 	<dependencies>
@@ -38,19 +39,22 @@
 			<version>${groovy-all.version}</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib-jdk8</artifactId>
+			<version>${kotlin.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-test-junit</artifactId>
+			<version>${kotlin.version}</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
+		<testSourceDirectory>src/test/groovy</testSourceDirectory>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>${maven-compiler-plugin.version}</version>
-				<configuration>
-					<release>${java.version}</release>
-				</configuration>
-			</plugin>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -62,9 +66,6 @@
 						<include>**/*Test.*</include>
 						<include>**/*Spec.*</include>
 					</includes>
-					<excludes>
-						<exclude>**/Abstract*.java</exclude>
-					</excludes>
 				</configuration>
 			</plugin>
 
@@ -79,6 +80,23 @@
 						</goals>
 					</execution>
 				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.jetbrains.kotlin</groupId>
+				<artifactId>kotlin-maven-plugin</artifactId>
+				<version>${kotlin.version}</version>
+				<executions>
+					<execution>
+						<id>compile</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>compile</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<jvmTarget>${kotlin-maven-plugin.jvmTarget}</jvmTarget>
+				</configuration>
 			</plugin>
 		</plugins>
 	</build>
