--- a/.gitignore
+++ b/.gitignore
@@ -112,7 +112,7 @@ pom.xml.releaseBackup
 pom.xml.versionsBackup
 pom.xml.next
 release.properties
-
+.mvn/wrapper/maven-wrapper.jar
 
 ##  Test reports;
 ##
