--- a/pom.xml
+++ b/pom.xml
@@ -7,19 +7,24 @@
 	<groupId>pl.dmichalski</groupId>
 	<artifactId>algorithms-and-data-structures</artifactId>
 	<version>1.0-SNAPSHOT</version>
+	<name>Algorithms and data structure</name>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<kotlin.version>1.4.10</kotlin.version>
 		<spock-core.version>1.1-groovy-2.4</spock-core.version>
 		<groovy-all.version>2.4.11</groovy-all.version>
-		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
 		<maven-surefire-plugin.version>2.22.2</maven-surefire-plugin.version>
 		<gmavenplus-plugin.version>1.10.0</gmavenplus-plugin.version>
-		<kotlin.version>1.4.10</kotlin.version>
 		<kotlin-maven-plugin.jvmTarget>11</kotlin-maven-plugin.jvmTarget>
 	</properties>
 
 	<dependencies>
+		<dependency>
+			<groupId>org.jetbrains.kotlin</groupId>
+			<artifactId>kotlin-stdlib</artifactId>
+			<version>${kotlin.version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.spockframework</groupId>
 			<artifactId>spock-core</artifactId>
@@ -31,11 +36,6 @@
 			<artifactId>groovy-all</artifactId>
 			<version>${groovy-all.version}</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains.kotlin</groupId>
-			<artifactId>kotlin-stdlib</artifactId>
-			<version>${kotlin.version}</version>
 		</dependency>
 	</dependencies>
 
